Card Images Template
Completed card image. I've been wanting to use this for a while. Woot. Contains an image, image caption,  description. I plan to use these as links to larger image galleries that contain color, black and white, and flash art subpages

--- a/index.html
+++ b/index.html
@@ -11,17 +11,45 @@
         <h1> Megan Boyle Tattoo</h1>
         <p> adlskfjaslkdjf</p>
     </section>
-    <section id="header" class="header">
-        <div>
-            <figure>
-                <img>
-                <figcaption>
 
+
+    <section class="header">
+        <div class="gallery">
+            <figure>
+                <img src="images/color1.PNG">
+                <figcaption>
+                    asdfasdf
                 </figcaption>
 
             </figure>
-            <p> adjfalsdkjfldsj</p>
+            <p class="description"> adjfalsdkjfldsj</p>
+
         </div>
+        <div class="gallery">
+            <figure>
+                <img src="images/color1.PNG">
+                <figcaption>
+                    asdfasdf
+                </figcaption>
+
+            </figure>
+            <p class="description"> adjfalsdkjfldsj</p>
+
+        </div>
+        <div class="gallery">
+            <figure>
+                <img src="images/color1.PNG">
+                <figcaption>
+                    asdfasdf
+                </figcaption>
+
+            </figure>
+            <p class="description"> adjfalsdkjfldsj</p>
+
+        </div>
+    </section>
+
+
 
 
     </section>
